# Distributed-Radxi-Hash-Join-on-GPUs

./: .gitignore  CMakeLists.txt  LICENSE  empty.cpp  main.cpp
core/: CMakeLists.txt  Configuration.h
data/: CMakeLists.txt  CompressedTuple.h  Relation.cpp  Relation.h  Tuple.h  Window.cpp  Window.h  data.hpp
histograms/: AssignmentMap.cpp  AssignmentMap.h  CMakeLists.txt  GlobalHistogram.cpp  GlobalHistogram.h  LocalHistogram.cpp  LocalHistogram.h  OffsetMap.cpp  OffsetMap.h
memory/: CMakeLists.txt  Pool.cpp  Pool.h
operators/: CMakeLists.txt  HashJoin.cpp  HashJoin.h
operators/gpu/: CMakeLists.txt  eth.cu  eth.cuh  kernels.cu  kernels.cuh  kernels_compressed.cu  kernels_optimized.cu  kernels_tile.cu  small_data.cu  small_data.cuh  small_data_optimized.cu
performance/: CMakeLists.txt  Measurements.cpp  Measurements.h
tasks/: BuildProbe.cpp  BuildProbe.h  CMakeLists.txt  HistogramComputation.cpp  HistogramComputation.h  LocalPartitioning.cpp  LocalPartitioning.h  NetworkPartitioning.cpp  NetworkPartitioning.h  Task.h
tasks/gpu/: CMakeLists.txt  GPUWrapper.cpp  GPUWrapper.cu  GPUWrapper.hpp
tasks/gpu/kernels/: CMakeLists.txt  GPUProbe.cu  GPUProbe.cuh
utils/: CMakeLists.txt  Debug.h  Thread.cpp  Thread.h
utils/gpu/: CMakeLists.txt  common.cu  common.cuh  cuda_parameters.hpp  debug.cuh
